add depth property in ServiceRefOrValue for $graphLookup aggregate mongo db function
