# internal/pkg/tmf-service-inventory/swagger/tmf638v4_2/TMF638_Service_Inventory_Management_API_v4.2.0_beta_swagger.json
@@ -2971,6 +2971,12 @@
           "description": "The actual type of the target instance when needed for disambiguation.",
           "x-go-custom-tag": "bson:\"@referredType,omitempty\"",
           "x-nullable": true
+        },
+        "depth": {
+          "type": "integer",
+          "description": "Depth of service reference when we search graphLookup",
+          "x-go-custom-tag": "bson:\"depth,omitempty\"",
+          "x-nullable": true
         }
       }
     },
