# internal/pkg/tmf-service-inventory/swagger/tmf638v4_2/server/models/service_ref_or_value.go
@@ -36,6 +36,9 @@ type ServiceRefOrValue struct {
 	// Is it a customer facing or resource facing service
 	Category *string `json:"category,omitempty" bson:"category,omitempty"`
 
+	// Depth of service reference when we search graphLookup
+	Depth *int64 `json:"depth,omitempty" bson:"depth,omitempty"`
+
 	// Free-text description of the service
 	Description *string `json:"description,omitempty" bson:"description,omitempty"`
 
